@@ -1,5 +1,3 @@
 * Add restore script.
 
-* Enable "keep" functionality.
-
 * Add snapshot backups.
